# imr

examples/: CMakeLists.txt
examples/21_directional_light_plane/: 21_directional_light_plane.cpp  21_directional_light_plane.glsl  CMakeLists.txt
examples/22_shadow_mapping/: 22_shadow_mapping.cpp  22_shadow_mapping.glsl  CMakeLists.txt  README.md
examples/common/: camera.h
